<resources>
    <string name="app_name">Trivia App</string>
    <string name="trivia_time_tbar">Trivia Time!</string>
    <string name="user_select">Who\'s Playing?</string>
    <string name="add_user">Add User</string>

    <string name="question_number">Question %1$d:</string>
    <string name="trueOption">True</string>
    <string name="falseOption">False</string>
    <string name="submit_button">Confirm</string>
    <string name="gems_earned">💎 Gems Earned: %1$d</string>

    <string name="home">Home</string>
    <string name="hourChar">H</string>
    <string name="minChar">M</string>
    <string name="secChar">S</string>
    <string name="untilNewQs">until new questions!</string>
    <string name="collection">Collection</string>
    <string name="history">History</string>
    <string name="triviaExc">Trivia!</string>
    <string name="preferences">Preferences</string>

    <string name="streakShowcase">Streak: %1$d 🔥</string>
    <string name="gemsShowcase">Gems: %1$d 💎</string>
    <string name="playMorePlease">Play Trivia to increase your Streak 🔥 and earn Gems 💎!</string>

    <string name="gamesPlayed">Games Played</string>
    <string name="winRate">Win Rate</string>

    <string name="playTriviaTitle">Play Trivia!</string>
    <string name="howPlayToday">How would you like to play today?</string>
    <string name="createCustom">Create Custom</string>
    <string name="playCustom">Import Custom</string>
    <string name="customDesc">Create and play user-created Trivia!</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="gameDesc">Standard Trivia! 2 lives for every five questions.</string>
    <string name="hardcore">Hardcore</string>
    <string name="hardcoreDesc">Hard mode. One life. Ten questions. Can you do it?</string>
    <string name="hardcoreLockedDesc">The ultimate test. Unlock it in your Collection.</string>

    <string name="createTrivia">Create Trivia!</string>
    <string name="yourTriviaName">Name your Trivia!</string>
    <string name="yourQuestion">Your Question</string>
    <string name="multipleChoice">Multiple Choice</string>
    <string name="trueFalse">True/False</string>
    <string name="answerOption1">Answer Option 1</string>
    <string name="answerOption2">Answer Option 2</string>
    <string name="answerOption3">Answer Option 3</string>
    <string name="answerOption4">Answer Option 4</string>
    <string name="finish">Finish!</string>

<!--    Dialog Boxes    -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="usernameHint">Username (You cannot change this!)</string>
    <string name="save">Save</string>

<!--    Trivia Categories     -->
    <string name="trivGeneralKnowledge">General Knowledge</string>
    <string name="trivBooks">Books</string>
    <string name="trivFilm">Film</string>
    <string name="trivMusic">Music</string>
    <string name="trivMusicals">Musicals \% Theatres</string>
    <string name="trivTelevision">Television</string>
    <string name="trivVideoGames">Video Games</string>
    <string name="trivBoardGames">Board Games</string>
    <string name="trivScienceAndNature">Science %amp; Nature</string>
    <string name="trivComputers">Computers</string>
    <string name="trivMathematics">Mathematics</string>
    <string name="trivMythology">Mythology</string>
    <string name="trivSports">Sports</string>
    <string name="trivGeography">Geography</string>
    <string name="trivHistory">History</string>
    <string name="trivPolitics">Politics</string>
    <string name="trivArt">Art</string>
    <string name="trivCelebrities">Celebrities</string>
    <string name="trivAnimals">Animals</string>
    <string name="trivVehicles">Vehicles</string>
    <string name="trivComics">Comics</string>
    <string name="trivGadgets">Gadgets</string>
    <string name="trivJapaneseAnimeAndManga">Japanese Anime %amp; Manga</string>
    <string name="trivCartoonAndAnimations">Cartoon %amp; Animations</string>

<!--    Trivia Options Popup    -->
    <string name="questionType">Question Type</string>
    <string name="numberOfQuestions">Number of Questions</string>
    <string name="numberOfQuestionsHint">Enter a number of questions</string>
    <string name="selectCategory">Select Category</string>
    <string name="confirm">Confirm</string>
    <string name="hardcoreModeInfo">Hardcore Mode: 10 questions, 1 life.</string>

    <!-- Preferences -->
    <string name="preferencesTitle">Preferences</string>
    <string name="triviaSettings">Trivia Settings</string>
    <string name="pushNotifications">Push Notifications</string>
    <string name="disabledText">Disabled</string>
    <string name="enabledText">Enabled</string>
    <string name="quizResetTime">Quiz Reset Time</string>
    <string name="editQuizTime">Edit Quiz Time</string>
    <string name="accountSettings">Account Settings</string>
    <string name="hiddenPassword">••••••••</string>
    <string name="resetAccount">Reset Account</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="toolbarBackButton">Navigate Back</string>
    <string name="passwordChangeHint">Change your password</string>

    <!-- Notifs -->
    <string name="notification_title">Trivia Time!</string>
    <string name="notification_text">Your Trivia just reset! Play now to earn gems!</string>

    <!-- Colletion -->
    <string name="purchaseHardcore">Purchase Hardcore: 1000 💎</string>
    <string name="buy">Buy</string>
    <string name="equip">Equip</string>
    <string name="inUse">In Use</string>
    <string name="avatarPrice">200 💎</string>
    <string name="justPrice">$1%d💎</string>
    <string name="unlocked">Unlocked</string>
    <string name="notEnoughGems">Not enough gems!</string>
    <string name="unlockedHardcore">Hardcore mode unlocked!</string>

    <string name="avatars">Avatars</string>
    <string name="avi_default">Default</string>
    <string name="avi_ewan">Ewan</string>
    <string name="avi_glorp">Glorp</string>
    <string name="avi_jolly">Jolly</string>
    <string name="avi_sour">Sour</string>
    <string name="avi_spooky">Spooky</string>
    <string name="avi_turnt">Turnt</string>
    <string name="avi_sleepy">Sleepy</string>
    <string name="avi_man">Man</string>

    <string name="themes">Themes</string>
    <string name="pets">Pets</string>
    <string name="comingSoon">Coming Soon</string>

    <!-- Placeholder -->
    <string name="placeholderTitle">Placeholder Title</string>



</resources>
