<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStreakCoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_play">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alexandria"
                    android:gravity="center"
                    android:text="@string/streakShowcase"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtCoins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alexandria"
                    android:text="@string/coinsShowcase"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtPlayMorePlease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alexandria"
                android:gravity="center"
                android:text="@string/playMorePlease"
                android:textAlignment="center"
                android:textColor="#878787"
                android:textSize="10sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtCustomDescription"
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:fontFamily="@font/alexandria"
        android:text="@string/customDesc"
        android:textAlignment="center"
        android:textColor="#878787"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtStandardDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLayCustomGames"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtHowWouldLikePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/howPlayToday"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewStreakCoins" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_play"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txtPlayTitle"
        android:layout_width="154dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/playTriviaTitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linLayCustomGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHowWouldLikePlay">

        <Button
            android:id="@+id/btnCreateCustom"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_bold"
            android:text="@string/createCustom" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/btnPlayCustom"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_bold"
            android:text="@string/playCustom" />
    </LinearLayout>

    <Button
        android:id="@+id/btnHardcore"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:backgroundTint="#A60000"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/hardcore"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtHardcoreDescription"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/txtHardcoreDescription"
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/alexandria"
        android:text="@string/hardcoreDesc"
        android:textAlignment="center"
        android:textColor="#878787"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linLayDifficulties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnHardcore"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnEasy"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="#69F0AE"
            android:fontFamily="@font/alexandria"
            android:text="@string/easy"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnNormal"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFD740"
            android:fontFamily="@font/alexandria"
            android:text="@string/normal"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnHard"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FF6E40"
            android:fontFamily="@font/alexandria"
            android:text="@string/hard"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtStandardDescription"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:fontFamily="@font/alexandria"
        android:gravity="center"
        android:text="@string/gameDesc"
        android:textAlignment="center"
        android:textColor="#878787"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linLayDifficulties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>