<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/preferencesTitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/triviaSettings"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/alexandria_bold"
                        android:paddingBottom="8dp" />

                    <!-- Push Notifications -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/tvPushNotificationStatus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pushNotifications"
                            android:textSize="16sp"
                            android:fontFamily="@font/alexandria" />

                        <TextView
                            android:id="@+id/tvNotiStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.05"
                            android:fontFamily="@font/alexandria"
                            android:text="@string/disabledText"
                            android:textColor="#888888"
                            android:textSize="16sp" />
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchPushNotifications"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <!-- Time to Reset Quiz -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/quizResetTime"
                            android:textSize="16sp"
                            android:fontFamily="@font/alexandria" />

                        <TextView
                            android:id="@+id/tvQuizResetTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="06:00 AM"
                            android:textSize="16sp"
                            android:layout_marginEnd="16dp"
                            android:textColor="#888888"
                            android:fontFamily="@font/alexandria" />

                        <ImageButton
                            android:id="@+id/btnEditTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/editQuizTime"
                            android:src="@drawable/ic_edit"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:elevation="4dp"
                            app:tint="@color/black" />



                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Account Settings Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accountSettings"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:fontFamily="@font/alexandria_bold"
                        android:paddingBottom="8dp" />

                    <!-- Change Name -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/username"
                            android:textSize="16sp"
                            android:fontFamily="@font/alexandria" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textSize="16sp"
                            android:textColor="#888888"
                            android:fontFamily="@font/alexandria" />

                    </LinearLayout>

                    <!-- Change Password -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/password"
                            android:textSize="16sp"
                            android:fontFamily="@font/alexandria" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hiddenPassword"
                            android:textSize="16sp"
                            android:textColor="#888888"
                            android:fontFamily="@font/alexandria" />

                    </LinearLayout>

                    <!-- Account delete/reset -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp">

                    <Button
                        android:id="@+id/btnResetAccount"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/resetAccount" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2" />

                    <Button
                        android:id="@+id/btnDeleteAccount"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deleteAccount" />

                </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
